[REFACTORING] perfomance optimizations

--- a/src/app/modules/problems/components/attempts-table/attempts-table.component.html
+++ b/src/app/modules/problems/components/attempts-table/attempts-table.component.html
@@ -2,6 +2,7 @@
   [attempts]="attempts"
   [contest]="contest"
   [hideSourceCodeSize]="hideSourceCodeSize"
+  [trigger]="trigger"
   (clicked)="openModal($event)">
 </base-table>
 
