--- a/src/@core/layout/components/footer/footer.component.scss
+++ b/src/@core/layout/components/footer/footer.component.scss
@@ -7,7 +7,7 @@ app-layout {
 footer.footer {
   position: absolute !important;
   bottom: calc(-321px - 20px) !important;
-  width: 100% !important;
+  //width: 100% !important;
 
   .card {
     box-shadow: none;
