--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,5 @@
 @import 'styles/primeng-sass/icons/primeicons';
 
 @import 'dragula/dist/dragula.css';
+
+@import 'styles/primeng-sass/theme-base/components/multimedia/galleria';
