--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-countdown/contest-standings-countdown.component.html
@@ -7,9 +7,9 @@
 <!--    {{ 'CONTESTS.CONTEST_STARTS' | translate }}-->
 <!--  </h4>-->
 } @else if (contest.status == ContestStatus.FINISHED) {
-  <h4 class="text-center text-dark ml-1 mb-2">
-    {{ 'CONTESTS.STANDINGS' | translate }}
-  </h4>
+<!--  <h4 class="text-center text-dark ml-1 mb-2">-->
+<!--    {{ 'CONTESTS.STANDINGS' | translate }}-->
+<!--  </h4>-->
 }
 
 @if (!contest.isFinished()) {
