--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.html
@@ -1,20 +1,19 @@
 <!--<app-content-header [contentHeader]="contentHeader"></app-content-header>-->
 
 <section [class]="contest | contestClasses">
-  <div class="contest-standings-top" style="background-image: url({{ contest.logo }});"></div>
+  <div class="bg-img" style="background-image: url({{ contest.logo }});"></div>
 
-  <div class="d-flex justify-content-center align-items-center">
-    <div class="d-flex align-items-center mt-1 mb-2">
+  <div class="contest-standings-top">
+    <div class="header">
       <kep-icon class="mr-50" name="contest" size="large-1" type="duotone"/>
-      <a [routerLink]="Resources.Contest | resourceById:contest.id">
-        <h2 class="text-dark text-center">
-          {{ contest.title }}
-        </h2>
-      </a>
+      <div class="font-large-1 text-dark">
+        {{ contest.title }}
+      </div>
     </div>
-  </div>
 
-  <contest-standings-countdown [contest]="contest"/>
+    <contest-standings-countdown [contest]="contest"/>
+    <contest-tab [contest]="contest"/>
+  </div>
 
   <kep-table [loading]="isLoading && contestants.length == 0" [empty]="contestants.length == 0">
     <ng-container header>
