--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings.component.scss
@@ -1,5 +1,28 @@
+@import 'styles/kep-imports';
+
 app-contest-standings {
   .contest-standings-top {
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 9px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border: 1px white solid;
+
+    @include dark-layout {
+      background: rgba(0, 0, 0, 0.25);
+      border: 1px $dark solid;
+    }
+
+    .header {
+      display: flex;
+      justify-content: start;
+      align-items: center;
+      margin-left: 1.2rem;
+      margin-bottom: 2rem;
+    }
+  }
+
+  .bg-img {
     position: absolute;
     top: -66px;
     width: 95%;
