[UI UPDATES] change font to Gilroy & change body color

--- a/src/@core/layout/components/content-header/content-header.component.html
+++ b/src/@core/layout/components/content-header/content-header.component.html
@@ -6,7 +6,7 @@
       <div class="content-header-left mb-0">
         <div class="breadcrumbs-top">
           <div class="d-flex mt-1">
-            <h2 class="content-header-title float-left mb-0">
+            <h2 class="content-header-title text-dark float-left mb-0">
               {{ contentHeader.headerTitle | translate }}
             </h2>
             <!-- app-breadcrumb component -->
