--- a/src/@core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/@core/scss/base/bootstrap-extended/_variables.scss
@@ -97,7 +97,7 @@ $spacers: map-merge(
 //
 // Settings for the `<body>` element.
 $body-bg: #f5f8fa !default;
-$body-color: #6e6b7b !default;
+$body-color: #403e48 !default;
 
 // Links
 //
@@ -134,8 +134,8 @@ $box-shadow: 0 4px 24px 0 rgba($black, 0.1) !default;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: 'Montserrat', Helvetica, Arial, sans-serif !default;
-$font-family-monospace: 'Montserrat', Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif: 'Gilroy', Helvetica, Arial, sans-serif !default;
+$font-family-monospace: 'Gilroy', Helvetica, Arial, sans-serif !default;
 
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default;
