--- a/src/app/styles/primeng-sass/themes/aura/aura-light/_variables.scss
+++ b/src/app/styles/primeng-sass/themes/aura/aura-light/_variables.scss
@@ -871,10 +871,10 @@ $imagePreviewActionIconFontSize: 1.5rem !default;
 $imagePreviewActionIconBorderRadius: 50% !default;
 
 :root {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Gilroy", sans-serif;
     font-feature-settings: "cv02", "cv03", "cv04", "cv11";
     font-variation-settings: normal;
-    --font-family: "Montserrat", sans-serif;
+    --font-family: "Gilroy", sans-serif;
     --font-feature-settings: "cv02", "cv03", "cv04", "cv11";
     --text-color: #{$shade700};
     --text-color-secondary: #{$shade500};
